plugins {
    id 'java'
}

sourceCompatibility = 15
targetCompatibility = 15

compileJava {
    options.compilerArgs += ['--enable-preview']
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.0'


    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

test {
    useJUnitPlatform()
}